--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <h2>GitHub for Dummies</h2>
     <form action="">
       <input type="email" placeholder="Enter your email..." />
       <input type="password" placeholder="Enter your password..." />
